--- a/index ver1.1.html
+++ b/index ver1.1.html
@@ -82,7 +82,7 @@
         bgMusic.loop = true; bgMusic.volume = 1.0;
 
         const loader = new THREE.TextureLoader();
-        const photoFiles = ['./img1.jpg', './img2.jpg', './img3.jpg', './img4.jpg', './img5.jpg'];
+        const photoFiles = ['./img1.jpg', './img2.jpg', './img3.jpg', './img4.jpg', './img5.jpg']; //tự đi mak thêm ảnh vào 
         const photoTextures = [];
         photoFiles.forEach((f, i) => photoTextures[i] = loader.load(f));
 
@@ -504,4 +504,5 @@
         });
     </script>
 </body>
+
 </html>
